# surpriseaz_rentals

./: .gitignore  README.md  pyproject.toml
hoa_insights/input/: parcels.csv
hoa_insights/misc/: issues.txt
hoa_insights/src/: db_checks.py  db_checks_remote.py  fetch_parcel_data.py  get_parcel_changes.py  get_parcel_data.py  insight_reports.py  mailer.py  main.py  publish_rental_insights.py  styles.py  triggers_checks.py  update_parcel_data.py  views_checks.py
hoa_insights/src/financials/: ytd_sales.py
hoa_insights/src/tests/: test_get_parcel_data.py  test_update_parcel_data.py
hoa_insights/src/tests/input/: test_parcels.csv
hoa_insights/src/tests/json_seed_data/: 501-79-632.json  501-79-677.json  501-92-652_redacted_owner.json  501-92-824_no_sale_data.json  501-93-353_registered_rental_no _contact_data.json  501-93-630.json  501-97-020_classed_rental.json  501-97-195_redacted_owner.json  509-10-394_redacted_owner_no_sales_data.json  509-11-040_no_sales_or_deed_data_classed_rental.json  509-11-455_sales_and_deed_data.json  509-11-600_registered_rental.json
hoa_insights/src/tests/json_update_data/: 501-92-031.json  501-92-652_redacted_owner_add_deed_data.json  501-92-824_new_sale.json  501-97-020_del_classed_rental.json  501-97-195_unredacted_owner.json  509-10-394_redacted_owner_add_sales_data.json  509-11-040_new_deed_data_still_classed_rental.json  509-11-054.json  509-11-455_new_owner_sale.json  509-11-489.json  (+1 more)
hoa_insights/src/utils/: date_today.py  parsers.py
hoa_insights/utils/: cron_hoa_insights.sh  tasksched_hoa_insights.bat
