[tool.poetry]
name = "hoa_insights"
version = "0.2.0"
description = "PROVIDES RENTAL PARCEL INSIGHTS FOR HOA COMMUNITIES"
authors = ["TASCer <info@tascs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.1.2"
aiohttp = "^3.8.6"
sqlalchemy = "^2.0.22"
python-dateutil = "^2.8.2"
pymysql = "^1.1.1"
sqlalchemy-utils = "^0.41.1"
pdfkit = "^1.0.0"
aiohttp-retry = "^2.8.3"
jinja2 = "^3.1.2"
cryptography = "^41.0.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
